many changes to code style
