# app.py
@@ -1,10 +1,11 @@
 import os
+import base64
+import uuid
+
+from config import config
 import flask
-import copy
-from datetime import datetime
-from flask import request, url_for, render_template, redirect, flash, send_from_directory, current_app, session, jsonify
-from flask import json
-from flask.helpers import make_response
+from flask import request, render_template, flash
+from flask import send_from_directory, session, jsonify, json
 from flask_bootstrap import Bootstrap
 from flask_cors import CORS
 from flask_swagger_ui import get_swaggerui_blueprint
@@ -12,16 +13,9 @@ from flask_sqlalchemy import SQLAlchemy
 from sqlalchemy.dialects.postgresql import JSON
 
 from flask_wtf import FlaskForm
-from wtforms import URLField, SelectField, FieldList, FormField, StringField
+from wtforms import URLField, SelectField, FieldList, FormField
 from wtforms.validators import DataRequired, Optional, URL
-#from source.chowlk.transformations import transform_ontology
-#from source.chowlk.utils import read_drawio_xml
-import xml.etree.ElementTree as ET
-from config import config
-import uuid
 import maptomethod
-import base64
-
 
 config_name = os.environ.get("APP_MODE") or "development"
 
@@ -33,10 +27,10 @@ CORS(app)
 bootstrap = Bootstrap(app)
 
 # Schema definition
+
+
 class User(db.Model):
-
     __tablename__ = "users"
-
     id = db.Column(db.Integer, primary_key=True)
     date = db.Column(db.DateTime)
     input = db.Column(db.String)
@@ -52,22 +46,38 @@ class User(db.Model):
     def __repr__(self) -> str:
         return super().__repr__()
 
-methods_dict=maptomethod.get_methods()
-#methods_dict={'DIN_EN_ISO_527': 'https://raw.githubusercontent.com/Mat-O-Lab/MSEO/main/methods/DIN_EN_ISO_527-3.drawio.ttl'}
+
+methods_dict = maptomethod.mseo_methods
+# methods_dict={'DIN_EN_ISO_527': 'https://raw.githubusercontent.com/Mat-O-Lab/MSEO/main/methods/DIN_EN_ISO_527-3.drawio.ttl'}
+
 
 class StartForm(FlaskForm):
-    data_url = URLField('URL Meta Data', validators=[DataRequired(),URL()], description='Paste URL to meta data json file create from CSVToCSVW')
-    method_url = URLField('URL Method Data', validators=[Optional(),URL()], description='Paste URL to method graph create with MSEO')
-    method_sel = SelectField('Method Graph', choices=[(v,k) for k,v in methods_dict.items()],description='Alternativly select a method graph from https://github.com/Mat-O-Lab/MSEO/tree/main/methods')
+    data_url = URLField('URL Meta Data', validators=[DataRequired(), URL(
+    )], description='Paste URL to meta data json file create from CSVToCSVW')
+    method_url = URLField(
+        'URL Method Data',
+        validators=[Optional(), URL()],
+        description='Paste URL to method graph create with MSEO',
+    )
+    method_sel = SelectField(
+        'Method Graph',
+        choices=[(v, k) for k, v in methods_dict.items()],
+        description=('Alternativly select a method graph'
+                     'from https://github.com/Mat-O-Lab/MSEO/tree/main/methods'
+                     )
+    )
 
 
 class SelectForm(FlaskForm):
-    select = SelectField("Placeholder", default=(0, "None"),choices=[],validate_choice=False)
+    select = SelectField("Placeholder", default=(
+        0, "None"), choices=[], validate_choice=False)
+
 
 class MappingFormList(FlaskForm):
     items = FieldList(FormField(SelectForm))
 
-def get_select_entries(ice_list,info_list):
+
+def get_select_entries(ice_list, info_list):
     """
     Converts custom metadata to a forms.SelectForm(), which can then be
     used by SelectFormlist() to dynamically render select items.
@@ -76,11 +86,11 @@ def get_select_entries(ice_list,info_list):
     """
     all_select_items = []
     for ice in ice_list:
-        id = uuid.uuid1()   # allows for multiple selects
+        _id = uuid.uuid1()   # allows for multiple selects
         select_entry = SelectForm()
         select_entry.select.label = ice
         select_entry.select.name = ice
-        select_entry.select.id = f"{ice}-{id}"
+        select_entry.select.id = f"{ice}-{_id}"
         select_entry.select.choices = info_list
         all_select_items.append(select_entry)
     return all_select_items
@@ -89,6 +99,7 @@ def get_select_entries(ice_list,info_list):
 @app.route("/static/<path:path>")
 def send_static(path):
     return send_from_directory("static", path)
+
 
 SWAGGER_URL = "/api/docs"
 API_URL = "/static/swagger.json"
@@ -109,8 +120,16 @@ def index():
     start_form = StartForm()
     mapping_form = MappingFormList()
     message = ''
-    result= ''
-    return render_template("index.html",logo=logo, start_form=start_form, message=message, mapping_form=mapping_form, result=result)
+    result = ''
+    return render_template(
+        "index.html",
+        logo=logo,
+        start_form=start_form,
+        message=message,
+        mapping_form=mapping_form,
+        result=result
+    )
+
 
 @app.route('/create_mapper', methods=['POST'])
 def create_mapper():
@@ -118,72 +137,105 @@ def create_mapper():
     start_form = StartForm()
     mapping_form = MappingFormList()
     message = ''
-    result= ''
-    #print(request.form)
+    result = ''
+    # print(request.form)
     if start_form.validate_on_submit():
         # url valid now test if readable -metadata.json
-        data_url=start_form.data_url.data
+        data_url = start_form.data_url.data
         print(start_form.method_url.data)
-        #if url to method graph provided use it if not use select widget
+        # if url to method graph provided use it if not use select widget
         if start_form.method_url.data:
-            method_url=start_form.method_url.data
+            method_url = start_form.method_url.data
         else:
-            method_url=start_form.method_sel.data
+            method_url = start_form.method_sel.data
 
         try:
-            mapper=maptomethod.Mapper(data_url=data_url, method_url=method_url)
+            mapper = maptomethod.Mapper(
+                data_url=data_url, method_url=method_url)
         except (ValueError, TypeError) as err:
             flash(str(err))
         else:
             flash(mapper)
             session['data_url'] = mapper.data_url
-            session['method_url'] =mapper.method_url
-            session['methode_ICEs'] = mapper.ICEs
-            session['info_lines'] = mapper.InfoLines
-            info_choices=[(id, value['text'])  for id, value in mapper.InfoLines.items()]
-            info_choices.insert(0,(None,'None'))
-            mapping_form.items=get_select_entries( session.get('methode_ICEs', None).keys(),info_choices)
-    return render_template("index.html",logo=logo, start_form=start_form, message=message, mapping_form=mapping_form, result=result)
+            session['method_url'] = mapper.method_url
+            session['methode_ices'] = mapper.ices
+            session['info_lines'] = mapper.info_lines
+            info_choices = [(id, value['text']) for
+                            id, value in mapper.info_lines.items()]
+            info_choices.insert(0, (None, 'None'))
+            mapping_form.items = get_select_entries(
+                session.get('methode_ices', None).keys(), info_choices)
+    return render_template(
+        "index.html",
+        logo=logo,
+        start_form=start_form,
+        message=message,
+        mapping_form=mapping_form,
+        result=result
+    )
+
 
 @app.route('/map', methods=['POST'])
 def map():
     logo = './static/resources/MatOLab-Logo.svg'
-    start_form = StartForm(data_url=session.get('data_url', None),method_sel=session.get('method_url', None))
+    start_form = StartForm(data_url=session.get(
+        'data_url', None), method_sel=session.get('method_url', None))
     message = ''
-    result= ''
-    temp=request.form.to_dict()
+    temp = request.form.to_dict()
     temp.pop("csrf_token")
-    maplist=[(k, v) for k, v in temp.items() if v != 'None']
+    maplist = [(k, v) for k, v in temp.items() if v != 'None']
     session['maplist'] = maplist
-    #print(maplist)
-    #filename,result_string=maptomethod.get_mapping_output(session.get('data_url', None), session.get('method_url', None), maplist, session.get('info_lines', None))
-    filename,result_string=maptomethod.Mapper(session.get('data_url', None), session.get('method_url', None), session.get('info_lines', None), maplist=maplist).to_yaml()
+    # print(maplist)
+    filename, result_string = maptomethod.Mapper(
+        session.get('data_url', None),
+        session.get('method_url', None),
+        session.get('info_lines', None),
+        maplist=maplist).to_yaml()
     b64 = base64.b64encode(result_string.encode())
     payload = b64.decode()
-    return render_template("index.html",logo=logo, start_form=start_form, message=message, mapping_form=None, result=result_string, filename=filename, payload=payload)
+    return render_template(
+        "index.html",
+        logo=logo,
+        start_form=start_form,
+        message=message,
+        mapping_form=None,
+        result=result_string,
+        filename=filename,
+        payload=payload
+    )
+
 
 @app.route("/api/ices", methods=["GET"])
 def ices():
     if request.method == "GET":
         url = request.args.get('url')
-        return json.dumps(maptomethod.get_methode_ICE(url))
+        return json.dumps(maptomethod.get_methode_ices(url))
+
 
 @app.route("/api/infolines", methods=["GET"])
 def infolines():
     if request.method == "GET":
         url = request.args.get('url')
-        return json.dumps(maptomethod.get_data_Info(url))
+        return json.dumps(maptomethod.get_data_info_lines(url))
+
 
 @app.route("/api/mappingfile", methods=["POST"])
 def mappingfile():
     if request.method == "POST":
         content = request.get_json()
-        filename, file_data = maptomethod.Mapper(content['data_url'],content['method_url'], content['info_lines'], maplist=content['maplist'].items()).to_yaml()
+        filename, file_data = maptomethod.Mapper(
+            content['data_url'],
+            content['method_url'],
+            content['info_lines'],
+            maplist=content['maplist'].items()
+        ).to_yaml()
         return jsonify({"filename": filename, "filedata": file_data})
+
 
 @app.errorhandler(500)
 def handle_500_error(e):
     return jsonify({"error": "Server error, review the input"}), 500
+
 
 if __name__ == "__main__":
     port = int(os.environ.get("PORT", 5000))
